<resources>
    <string name="app_name">SuitmediaTest</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="next">Next</string>
    <string name="nama_title">Nama :</string>
    <string name="name_title">Name :</string>
    <string name="nama_anda">Your Name</string>
    <string name="choose_event">Choose Event</string>
    <string name="choose_guest">Choose Guest</string>
    <string name="event">Event</string>
    <string name="nama">Nama</string>
    <string name="tanggal">tanggal</string>
    <string name="guest">Guest</string>
    <string name="date">tanggal</string>
    <string name="selamat_datang">Selamat Datang!</string>
    <string name="sertakan_gambar_profil_anda_n_untuk_melengkapi_profil">Sertakan gambar profil Anda \n untuk melengkapi profil</string>
    <string name="lorem">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="message_from_codi">MESSAGE FROM CODI</string>
    <string name="google_maps_key">AIzaSyDPkmAFVb3VHxzFdw89OPIBGdENKdLHDpc</string>

</resources>