<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="5dp"
    android:layout_margin="5dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/iv_event"
                android:layout_width="130dp"
                android:layout_height="150dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/iv_event"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/tv_nama"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nama"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_tanggal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/golden"
                    android:text="@string/tanggal"
                    android:textSize="14sp" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp">
                    <TextView
                        android:background="@color/blue"
                        android:textColor="@color/white"
                        android:paddingHorizontal="4dp"
                        android:paddingVertical="2dp"
                        android:layout_marginRight="4dp"
                        android:textSize="14sp"
                        android:text="#nuricia"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:background="@color/blue"
                        android:textColor="@color/white"
                        android:paddingHorizontal="4dp"
                        android:paddingVertical="2dp"
                        android:textSize="14sp"
                        android:layout_marginRight="4dp"
                        android:text="#education"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:background="@color/blue"
                        android:textColor="@color/white"
                        android:paddingHorizontal="4dp"
                        android:paddingVertical="2dp"
                        android:textSize="14sp"
                        android:layout_marginRight="4dp"
                        android:text="#festival"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lorem"
                    android:justificationMode="inter_word"
                    android:maxLines="4"
                    android:layout_marginTop="4dp"
                    android:ellipsize="end"
                    android:textSize="14sp"
                    />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
